####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = add.xpm connect_established.xpm filenew.xpm fileopen.xpm filesave.xpm gohome.xpm info.xpm linked.xpm locked.xpm monitor.xpm ok.xpm previous.xpm rectangle.xpm remove.xpm unlock.xpm zoom.xpm 

####### kdevelop will overwrite this part!!! (end)############
